# GTACOMPTA

./: .gitignore  CMakeLists.txt  README.md  index.html
.gitea/workflows/: build-server.yml  deploy-pages.yml
.github/workflows/: build-server.yml  build.yml  deploy-pages.yml  release.yml
include/: VersionGetter.h  awaitingtransactionmodel.h  basemodel.h  clientmodel.h  companysummarymodel.h  datamanager.h  employeemodel.h  filterproxymodel.h  notemodel.h  offermodel.h  remotedatabasemanager.h  supplementmodel.h  transactionmodel.h  wasmfilehandler.h
qml/: ConfirmDialog.qml  DatePicker.qml  FakeUpgradeDialog.qml  Main.qml  Main.qml.autosave  SettingsDialog.qml  SortableLabel.qml  SplashScreen.qml  VersionDialog.qml  WelcomeDialog.qml
qml/Components/: DatePicker.qml  RemoteDatabaseConfig.qml
qml/Dialogs/: AwaitingTransactionDialog.qml  ClearAllDialog.qml  ClientCommentDialog.qml  ClientDialog.qml  ConfirmDialog.qml  DatePickerDialog.qml  EmployeeDialog.qml  ExportDialog.qml  FakeUpgradeDialog.qml  ImportDialog.qml  MessageDialog.qml  NotesDialog.qml  SettingsDialog.qml  SupplementOfferManagementDialog.qml  SupplementSelectionDialog.qml  TransactionDialog.qml  VersionDialog.qml  WelcomeDialog.qml
qml/Pages/: MainPage.qml  SplashScreen.qml
qml/Singletons/: AppState.qml  Constants.qml  UserSettings.qml  UserSettings.qml.autosave
qml/Tabs/: AwaitingTransactionTab.qml  ClientTab.qml  EmployeeTab.qml  HomeTab.qml  TransactionTab.qml
resources/icons/: icons.qrc
resources/sounds/: sounds.qrc
server/: CMakeLists.txt
server/include/: databaseserver.h  usermanager.h
server/src/: databaseserver.cpp  main.cpp  usermanager.cpp
src/: VersionGetter.cpp  awaitingtransactionmodel.cpp  basemodel.cpp  clientmodel.cpp  companysummarymodel.cpp  datamanager.cpp  employeemodel.cpp  filterproxymodel.cpp  main.cpp  notemodel.cpp  offermodel.cpp  remotedatabasemanager.cpp  supplementmodel.cpp  transactionmodel.cpp  version.h.in  versiongetter.cpp  wasmfilehandler.cpp
tools/: installer.iss
